objects/Log__c.object
<CustomObject>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <description>Error Message</description>
        <label>ErrorMessage</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ErrorTypeEqualsFilteredErrorType__c</fullName>
        <formula>Filtered_Error_Type_Text__c = ErrorType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ErrorTypeEqualsFilteredErrorType</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ErrorType__c</fullName>
        <description>Type of error - e.g. limit error</description>
        <label>ErrorType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filtered_Error_Type_Text__c</fullName>
        <label>Filtered_Error_Type_Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filtererd_Error_Types__c</fullName>
        <label>Filtererd_Error_Types</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>GENERIC</fullName>
                </value>
                <value>
                    <fullName>LIMITS</fullName>
                </value>
                <value>
                    <fullName>LAST_MODIFIED_BY_ERROR</fullName>
                </value>
                <value>
                    <fullName>CREATED_BY_ERROR</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <label>Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProcessType__c</fullName>
        <description>Type of process  (e.g. AD, Renewal, Etc.)</description>
        <label>ProcessType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TrackingHistory__c</fullName>
        <description>Tracking History from Checkpoint Manager</description>
        <label>TrackingHistory</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created By User</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>From_Email__c</fullName>
        <label>From Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>History of Logs - mostly used for error logs</description>
    <label>Log</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ErrorMessage__c</columns>
        <columns>ErrorType__c</columns>
        <columns>Payload__c</columns>
        <columns>StackTrace__c</columns>
        <columns>Subject__c</columns>
        <columns>Source__c</columns>
        <columns>ProcessType__c</columns>
        <columns>TrackingHistory__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>